--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
-.idea/modules.xml
-.idea/vcs.xml
-.idea/vue-folder-structure-tree.iml
-.idea/workspace.xml
-.idea/codeStyles/codeStyleConfig.xml
+.DS_Store
+node_modules
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Node modules
 node_modules/
